Update to .Net 5

--- a/WpfEssentials/WpfEssentials.csproj
+++ b/WpfEssentials/WpfEssentials.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <UseWindowsForms>true</UseWindowsForms>
     <Authors>Andy Stahl</Authors>
@@ -15,7 +15,7 @@
     <PackageTags>wpf mvvm</PackageTags>
     <PackageId>WpfBasic.WpfEssentials</PackageId>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Version>1.1.0</Version>
+    <Version>1.2.0</Version>
   </PropertyGroup>
 
 </Project>
