--- a/WpfEssentials/WpfEssentials.csproj
+++ b/WpfEssentials/WpfEssentials.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <UseWindowsForms>true</UseWindowsForms>
     <Authors>Andy Stahl</Authors>
@@ -16,6 +16,12 @@
     <PackageId>WpfBasic.WpfEssentials</PackageId>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Version>1.3.3</Version>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft-WindowsAPICodePack-Core" Version="1.1.4" />
+    <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.4" />
+  </ItemGroup>
 
 </Project>
