--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -97,7 +97,7 @@ jobs:
         name: nuget
         if-no-files-found: error
         retention-days: 7
-        path: ${{ env.NuGetDirectory }}\*.nupkg
+        path: ${{ env.NuGetDirectory }}
 
   deploy:
     # Publish only when creating a GitHub Release
