--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -92,22 +92,22 @@ jobs:
     - run: dotnet pack WpfEssentials\WpfEssentials.csproj --configuration Release --output ${{ env.NuGetDirectory }}
 
     # Publish the NuGet package as an artifact, so they can be used in the following jobs
-    - uses: actions/upload-pages-artifact@v3
-      with:
-        name: nuget
-        if-no-files-found: error
-        retention-days: 7
-        path: ${{ env.NuGetDirectory }}
+    #- uses: actions/upload-pages-artifact@v3
+    #  with:
+    #    name: nuget
+    #    if-no-files-found: error
+    #    retention-days: 7
+    #    path: ${{ env.NuGetDirectory }}
 
     # Download the NuGet package created in the previous job
-    - uses: actions/download-artifact@v4
-      with:
-        name: nuget
-        path: ${{ env.NuGetDirectory }}
+    #- uses: actions/download-artifact@v4
+    #  with:
+    #    name: nuget
+    #    path: ${{ env.NuGetDirectory }}
 
     # Install the .NET SDK indicated in the global.json file
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v4
+    #- name: Setup .NET Core
+    #  uses: actions/setup-dotnet@v4
 
     # Publish all NuGet packages to NuGet.org
     # Use --skip-duplicate to prevent errors if a package with the same version already exists.
